fix failing tests for compare strings lib

--- a/setup.cfg
+++ b/setup.cfg
@@ -4,4 +4,4 @@ description-file = README.md
 [tool:pytest]
 pep8maxlinelength = 79
 python_files = *.py
-addopts = --cov-config=.coveragerc --cov=./ --pep8 --flakes --cov-report html
+addopts = -ra -q
