--- a/setup.cfg
+++ b/setup.cfg
@@ -2,6 +2,5 @@
 description-file = README.md
 
 [tool:pytest]
-pep8maxlinelength = 79
-python_files = *.py
-addopts = -ra -q
+python_files = *_tests.py *_test.py
+addopts = -ra -v
